[package]
name = "Project_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
graplot = "0.1.22"
rand = "0.8"
plotters = "0.3.5"
plotters-backend = "0.3"
druid = "0.7"
plotters-svg = "0.3"

